The New Update messes up Custom Colors specifically the "Use System Colors" Toggle When applying custom colors.
Categories
(Firefox :: Settings UI, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr91 | --- | unaffected |
| firefox94 | --- | wontfix |
| firefox95 | --- | wontfix |
| firefox96 | --- | verified |
People
(Reporter: james.hildebrand1, Assigned: emilio)
References
(Regression)
Details
(Keywords: access, regression)
Attachments
(8 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:94.0) Gecko/20100101 Firefox/94.0
Steps to reproduce:
Downloaded the new update from Nov. 5 , 2021
Actual results:
The new update forced all of my websites to white. The "Use System Colors" Toggle is Broken in Settings, when applying custom colors and selecting "Always"
Expected results:
The update should have updated seuccessfully and not forced me to find out why all my webpages were magically displaying in blinding white light (My windows color is set to Dark Mode). There is still clear evidence of this bug, as the Firefox settings is displaying in white, while my webpages are displaying my custom colors now.
The previous version had the settings page display in the same colors as my custom colors "Selected in Firefox 'Grey Background, Orange text'", but now this is an impossibility no matter which options are toggled, and settings are turned on or off.
The other two pictures demonstrate that the settings screen is not applying either system colors, or custom colors. The only way to get system colors to show is to disable all custom colors. This is a bug. Because then system colors will apply whether the Toggle is applied or not.
Comment 3•4 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Toolkit::Application Update' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
Comment 4•4 years ago
|
||
Thanks for the report. I'm pretty sure this is not an issue with the update itself, so I'm moving this out to what I hope is the right component.
Updated•4 years ago
|
Comment 6•4 years ago
|
||
:emilio I think this is expected behaviour -- foreground/background are still black/white with windows dark mode enabled, right?
flagging for awareness
| Assignee | ||
Comment 7•4 years ago
|
||
So, hold up, there are different things going on here:
- System colors toggle changing (breaking your custom colors): that's from bug 1593273, I believe.
about:preferencesnot honoring those. I believe that's expected becauseabout:preferencesis using system colors on Windows and we honor those when forcing colors as per spec.about:preferencesbeing light (the "use system colors" checkbox not having dark colors). I believe that's expected in Firefox 94 because it doesn't have bug 1733569 and Windows doesn't have native dark mode support. If you use a windows high-contrast theme then it should behave as you expect as that does change system colors.- Other websites being light even though you're in OS dark mode and forcing colors. That is expected as per the above.
So yeah, I believe that's expected. In beta and Nightly about:preferences is dark as well (so that covers (2) and (3)). When forcing colors, we could make regular websites dark too, let me see how that'd look like.
| Assignee | ||
Comment 8•4 years ago
|
||
This causes (among other things) pages to be dark when using regular
windows system colors and forcing colors to "always", which is nice.
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Comment 9•4 years ago
|
||
Set release status flags based on info from the regressing bug 1728187
Updated•4 years ago
|
Comment 10•4 years ago
|
||
:emilio I'm a bit concerned about this patch in light of bug 1740850. This might be work to spin off there.
Can you point me to some websites this should affect? I'm assuming sites with color-scheme meta tags will change, but I don't have a shortlist of those to check 😀 I looked at google (search, images, news) and bugzilla, but I'm not sure if those are good test cases.
In nightly, on MacOS I'm seeing the following:
- No FF HCM > about:preferences doesn't seem to respond to "use system colors". When my OS is dark, preferences is dark using (I assume?) the FF dark theme colors (not my OS colors). When my OS is light, preferences is light with the FF theme colors.
- With FF HCM > about:preferences is dark using OS colors when my OS is dark, light when my OS is light. I don't see a difference between light mode here and light mode without FF HCM -- but the dark modes are different. This doesn't change with/without "use system colors"
With your patch, on MacOS I get:
- No FF HCM > about:prefs is dark with FF colors when my OS is dark, light when my OS is light. Use system colors doesn't seem to change this.
- With FF HCM:
- Without use system colors > about:preferences is always light
- With use system colors > about:preferences is light when OS is light and dark (with OS colors) when OS is dark.
The dark mode color inconsistencies should probably be addressed in bug 1740850, but I'm wondering if the "always light" without system colors is better than what we have now -- if about:preferences is always themed either dark or light and NOT themed by user-customized colors in the colors dialog, are we better to err on the side of caution and leave this behaviour as-is? I'm wondering if we could be harming photosensitive users who expect about:preferences to match their customised colors when system colors isn't checked (I know this is maybe an incorrect expectation, given how we think about our about: pages vs. web content, but still wondering). Even with a system dark mode, if they uncheck 'use system colors', they'll get the light version of the page.
Comment 11•4 years ago
|
||
Comment 12•4 years ago
|
||
Comment 13•4 years ago
|
||
Comment 14•4 years ago
|
||
Comment 15•4 years ago
•
|
||
Screenshots are all "Always" with "Use system colors" without OS HCM enabled
| Assignee | ||
Comment 16•4 years ago
|
||
I get that for testing Linux :-)
Will take a look, that's not the expected rendering of course, it's expected that backgrounds and so on are dark.
Comment 17•4 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #16)
I get that for testing Linux :-)
Will take a look, that's not the expected rendering of course, it's expected that backgrounds and so on are dark.
I figured 😄 lemme know if I can get ya any more info on what I'm seeing here. happy to test other sites too
| Assignee | ||
Comment 18•4 years ago
|
||
Ah, I had a local change that I had forgotten to push to make the color functions in here to follow the default color-scheme.
Comment 19•4 years ago
|
||
Comment 20•4 years ago
|
||
| bugherder | ||
Comment 21•4 years ago
|
||
The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 22•4 years ago
|
||
Morgan, your call re. comment 21. If there aren't too many betas left might be worth letting it ride the trains but maybe you have different opinions :)
Comment 23•4 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #22)
Morgan, your call re. comment 21. If there aren't too many betas left might be worth letting it ride the trains but maybe you have different opinions :)
Yeah, let's let this ride the trains. It isn't risky per-say but HCM is rickety and it might uncover some other issues we wanna fix before it hits release.
Updated•4 years ago
|
Updated•4 years ago
|
Comment 24•4 years ago
|
||
I was able to reproduce the white screens on Win10 using build 94.0(20211025164031) and OS dark theme.
Issue is fixed on Win10/Ubuntu 20.4 using build 96.0b4 (20211212185725) and OS dark theme.
Updated•3 years ago
|
Description
•