Bug 1739699 - Use preferred color scheme when forcing colors with system colors (except windows HCM). r=morgan

This causes (among other things) pages to be dark when using regular
windows system colors and forcing colors to "always", which is nice.

Differential Revision: https://phabricator.services.mozilla.com/D131165